CSS Files/styleforIndex.css
.navBar{
    background-color: #333;
    overflow: hidden;
}
.navBar a{
    float: left;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}
.navbar a:hover{
    color: blue;
}
.navBar details{
    float: center;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}
.navBar a.active{
    background-color: #04AA6D;
    color:blue;
}
.famImg{
    background-image: url(../Images/myFamily.jpg);
    transform: rotate(270deg);

    filter: blur(6px);
    -webkit-filter:blur(6px);

    height: 1000px;
    
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    
}
.bg-text {
    background-color: rgb(0,0,0); 
    background-color: rgba(0,0,0, 0.4); 
    color: white;
    font-weight: bold;
    border: 3px solid #f1f1f1;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    width: 80%;
    padding: 20px;
    text-align: center;
  }
  .title-text {
    background-color: rgb(0,0,0); 
    background-color: rgba(0,0,0, 0.4); 
    color: white;
    font-weight: bold;
    border: 3px solid #f1f1f1;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -175%);
    z-index: 2;
    width: 80%;
    padding: 20px;
    text-align: center;
  }

